# flow-8-midi

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/: DEV_MANUAL.md  MANUAL.md  flow8-midi-implementation.md
src/: channels.rs  logger.rs  main.rs  midi.rs
src/controller/: interface_controller.rs  message.rs  mod.rs
src/model/: channels.rs  flow8.rs  flow_8_controller.rs  message.rs  mod.rs  page.rs
src/service/: app_config.rs  ble.rs  midi.rs  midi_mapper.rs  mod.rs  single_instance.rs  sysex_calibration.rs  sysex_parser.rs  tray.rs
src/view/: device_select_page.rs  eq_page.rs  fx_page.rs  mixer_page.rs  mod.rs  nav_bar.rs  sends_page.rs  settings_page.rs  snapshots_page.rs  widgets.rs
